fixed overflow on chat window

--- a/client/src/components/Chat/chat.scss
+++ b/client/src/components/Chat/chat.scss
@@ -12,7 +12,6 @@
   flex-direction: row-reverse;
   justify-content: space-between;
   align-items: flex-end;
-  overflow: hidden;
 }
 
 .chatZone {
